--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 MONGODB_URI=mongodb+srv://jeetandel0404:jeet123@cluster01.o200oab.mongodb.net/student_council
-NEXTAUTH_URL=http://localhost:3000  
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_SECRET=council
