--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next": "15.5.4",
     "next-auth": "^4.24.11",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-pdf": "^10.2.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
